--- a/plugins/crosstracker/scripts/cross-tracker/themes/_writing-mode.scss
+++ b/plugins/crosstracker/scripts/cross-tracker/themes/_writing-mode.scss
@@ -20,14 +20,6 @@
 @use "./query-edition";
 @use "@tuleap/tlp-badge/badge-with-remove-button";
 
-.cross-tracker-selector {
-    display: flex;
-
-    > :first-child {
-        margin-right: var(--tlp-x-large-spacing);
-    }
-}
-
 .cross-tracker-selector-project-input,
 .cross-tracker-selector-tracker-input.tlp-select {
     min-width: 200px;
